--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-jwt": "^8.4.1",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "marked": "^13.0.2",
     "md5": "^2.3.0",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
